src/objects/Monthly_Revenue_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Monthly Revenue Forecasts</relationshipLabel>
        <relationshipName>Monthly_Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Monthly Revenue Forecasts</relationshipLabel>
        <relationshipName>Monthly_Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_issue_fee_per_card__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Card issue fee per card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date_1_Year__c</fullName>
        <description>Used to check whether the MRF record&apos;s Revenue Date is less than 12 months after the Close Date for 1st Contract Year Revenue calculation</description>
        <formula>IF(
  AND(
    Month(Opportunity__r.CloseDate) = 2,
    Day(Opportunity__r.CloseDate) = 29
  ),
  DATE(
    YEAR(Opportunity__r.CloseDate) + 1,
    Month(Opportunity__r.CloseDate),
    Day(Opportunity__r.CloseDate) - 1
  ),
  DATE(
    YEAR(Opportunity__r.CloseDate) + 1,
    Month(Opportunity__r.CloseDate),
    Day(Opportunity__r.CloseDate)
  )
)</formula>
        <label>Close Date + 1 Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FX_on_Spend_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FX on Spend Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Implementation_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Implementation Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Load_onto_Card__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Initial Load onto Card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interchange_Rate_Revenue_as_percentage__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Interchange Rate (Revenue as percentage)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Load_Revenue__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Load Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Card_Management_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Card Management Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_converted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly Revenue (converted)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Settlement1__c</fullName>
        <label>Monthly Settlement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Settlement__c</fullName>
        <formula>Settlement_ATM__c + Settlement_POS__c</formula>
        <label>Monthly Settlement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Transaction_Fee_ATM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Transaction Fee ATM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Transaction_Fee_POS__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Monthly Transaction Fee POS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Revenue__c</fullName>
        <formula>IF(

/* Check Virtual Prepaid VE or All In One 
*/
OR( 
Opportunity__r.RecordTypeId = &apos;012700000005qig&apos;, 
Opportunity__r.RecordTypeId = &apos;012700000005xWw&apos; 
),

Transaction_Revenue__c
+
/* Takes the place of Settlement * (Interchange - Rebate)
*/
(Transactions__c * 0.67),

IF(
/* Check Virtual Debit MC
*/
Opportunity__r.RecordTypeId = &apos;012700000005wUG&apos;, 

Transaction_Revenue__c 
+ 
(Monthly_Settlement1__c  * (Opportunity__r.Interchange_Rate_Revenue_as_a_percentag__c - Opportunity__r.Rebate__c)), 

IF( 
/* Check all Expense, apart from Transport &amp; Haulage
*/ 

OR( 
Opportunity__r.RecordTypeId = &apos;012700000005qic&apos;, 
Opportunity__r.RecordTypeId = &apos;012700000005rA9&apos;, 
Opportunity__r.RecordTypeId = &apos;012700000005rAA&apos;, 
Opportunity__r.RecordTypeId = &apos;012700000005rAB&apos;, 
Opportunity__r.RecordTypeId = &apos;012700000005qzo&apos;, 
Opportunity__r.RecordTypeId = &apos;012700000005rAC&apos;, 
Opportunity__r.RecordTypeId = &apos;012700000005r0N&apos;, 
Opportunity__r.RecordTypeId = &apos;012700000005qzt&apos; 
), 

(Monthly_Settlement1__c * Opportunity__r.Interchange_Rate_Revenue_as_a_percentag__c) 
+ 
((Opportunity__r.Number_of_Cards__c / 12) * Opportunity__r.Card_Issue_Revenue__c) 
+ 
((Opportunity__r.Number_of_Cards__c / 12) * Opportunity__r.Monthly_Card_Revenue__c), 

IF(
Opportunity__r.Record_Type_Name__c = &apos;MasterCard&apos;,
Monthly_Settlement1__c * 0.01,

/* All other record types 
*/ 

Monthly_Settlement1__c * (Opportunity__r.Interchange_Rate_Revenue_as_a_percentag__c - Opportunity__r.Rebate__c) 

))))</formula>
        <label>Net Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Cards__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Cards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date_Year__c</fullName>
        <description>Used by Rollup Helper app.</description>
        <formula>TEXT(YEAR( Opportunity__r.CloseDate))</formula>
        <label>Opportunity Close Date - Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Monthly Revenue Forecasts</relationshipLabel>
        <relationshipName>Monthly_Revenue_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ramp_up_Flag__c</fullName>
        <formula>AND(
  Revenue_Date__c &gt;= Opportunity__r.Implementation_Revenue__c,
  Revenue_Date__c &lt;= Opportunity__r.Forecast_Full_Service_Revenue_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ramp-up Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reload_onto_Card__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reload onto Card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Date_Close_Date_1_Year__c</fullName>
        <description>Used to identify MRF records whose Net Monthly Revenue should be included in 1st Contract Year Revenue total</description>
        <formula>IF(
  Revenue_Date__c &lt;= Close_Date_1_Year__c,
  TRUE,
  FALSE
)</formula>
        <label>Revenue Date &lt;= Close Date + 1 Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Date_Year__c</fullName>
        <description>Used by Rollup Helper app</description>
        <formula>TEXT(YEAR( Revenue_Date__c ))</formula>
        <label>Revenue Date - Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Year_Matches_Close_Year__c</fullName>
        <description>Used by Rollup Helper app</description>
        <formula>Revenue_Date_Year__c = Opportunity_Close_Date_Year__c</formula>
        <label>Revenue Year Matches Close Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Settlement_ATM__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Settlement ATM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Settlement_POS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Settlement POS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_ATM__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Transaction ATM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_POS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction POS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Revenue__c</fullName>
        <description>Populated by code</description>
        <inlineHelpText>Calculation is [MRF] Transactions x [Opportunity] Fees Per Txn Pos</inlineHelpText>
        <label>Net Transaction Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transactions__c</fullName>
        <label>Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Count__c</fullName>
        <description>Power of One formula for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Net_Monthly_Revenue__c</fullName>
        <formula>Net_Monthly_Revenue__c * Opportunity__r.Probability</formula>
        <label>Weighted Net Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Monthly Revenue Forecast</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly Revenue Forecast</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Revenue Forecasts</pluralLabel>
    <recordTypes>
        <fullName>CP_Disbursement</fullName>
        <active>true</active>
        <description>This is a Record type for disbursement product type</description>
        <label>CP Disbursement</label>
    </recordTypes>
    <recordTypes>
        <fullName>CP_Non_Disbursement</fullName>
        <active>true</active>
        <description>This is a Record type is for non disbursement products</description>
        <label>CP Non Disbursement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>